--- a/src/components/Answer.css
+++ b/src/components/Answer.css
@@ -8,8 +8,8 @@
   background: #ff2d2d;
 }
 
-p {
-  display: inline-blocks;
+.answer {
+  display: inline;
   cursor: pointer;
   padding: 5px 15px;
   margin: 10px;
